Added Documentation for put in order request
