# app/Http/Controllers/Apis/OrderController.php
@@ -114,6 +114,49 @@ class OrderController extends Controller
         return response()->json(Order::find($id));
     }
 
+    /**
+     * @OA\Put(
+     *      path="/orders/{id}",
+     *      operationId="updateOrder",
+     *      tags={"Orders"},
+     *      summary="Update existing order",
+     *      description="Returns updated order data",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Order id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateOrderRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=202,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Order")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
     public function update(OrdersRequest $request, $id)
     {
         $order = Order::find($id);
